evidence/networkpolicy.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"private-object-store","namespace":"group04"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"access":"s3"}}}],"ports":[{"port":8333,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"objects"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-10-03T15:26:56Z"
    generation: 1
    name: private-object-store
    namespace: group04
    resourceVersion: "4402"
    uid: e764b282-c205-4efa-b815-62e7f3295e2a
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            access: s3
      ports:
      - port: 8333
        protocol: TCP
    podSelector:
      matchLabels:
        app: objects
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
